--- a/xi-bone/configure.in
+++ b/xi-bone/configure.in
@@ -48,13 +48,9 @@ AC_ARG_ENABLE(posix,
   esac],
   [])
 
-AM_CONDITIONAL(RTAI3, test x$rtos = xrtai3)
 AM_CONDITIONAL([XENOMAI],[test x$rtos = xxenomai])
 AM_CONDITIONAL([POSIX],[test x$rtos = xposix])
-if test x$rtos = xrtai3; then
-  RTOS_CPPFLAGS=$RTAI_CPPFLAGS
-  RTOS_LDFLAGS=$RTAI_LDFLAGS
-elif test x$rtos = xxenomai; then
+if test x$rtos = xxenomai; then
   if test -x /usr/xenomai/bin/xeno-config; then
     XENO_CONFIG='/usr/xenomai/bin/xeno-config'
   elif test -x /usr/bin/xeno-config; then
@@ -101,11 +97,7 @@ AC_ARG_ENABLE(analogy,
   esac],
   [analogy=true])  
 
-if test x$rtos = xrtai3; then
-  AM_CONDITIONAL(BUILD_COMEDI, test x$comedi = xtrue)
-  AM_CONDITIONAL(BUILD_COMEDILIB,false)
-  AM_CONDITIONAL(BUILD_ANALOGY, false)
-elif test x$rtos = xposix; then
+if test x$rtos = xposix; then
   AM_CONDITIONAL(BUILD_COMEDI,false)
   AM_CONDITIONAL(BUILD_COMEDILIB, test x$comedi = xtrue)
   AM_CONDITIONAL(BUILD_ANALOGY, false)
