--- a/xi-bone/configure.in
+++ b/xi-bone/configure.in
@@ -1,4 +1,4 @@
-AC_INIT([RTXI],[trunk],[rtxi-help@lists.sourceforge.net],rtxi)
+AC_INIT([RTXI],[xi-bone],[yapatel@gatech.edu],xi-bone)
 
 AM_CONFIG_HEADER(include/rtxi_config.h)
 AM_INIT_AUTOMAKE([foreign])
@@ -22,10 +22,10 @@ AC_CHECK_LIB([hdf5_hl],[H5PTopen])
 HDF_LIBS=$LIBS
 AC_SUBST(HDF_LIBS)
 
-#AX_HAVE_QT
-##if test "$have_qt" != "yes" ; then
-#    AC_MSG_ERROR([Qt not found; see help on how to specify Qt location])
-#fi
+AX_HAVE_QT
+if test "$have_qt" != "yes" ; then
+    AC_MSG_ERROR([Qt not found; see help on how to specify Qt location])
+fi
 
 rtos=""
 
