--- a/xi-bone/configure.in
+++ b/xi-bone/configure.in
@@ -1,4 +1,4 @@
-AC_INIT([RTXI],[trunk],[rtxi-help@lists.sourceforge.net],rtxi)
+AC_INIT([RTXI],[boneclamp],[yapatel@gatech.edu],xi-bone)
 
 AM_CONFIG_HEADER(include/rtxi_config.h)
 AM_INIT_AUTOMAKE(foreign)
