--- a/xi-bone/scripts/Makefile.am
+++ b/xi-bone/scripts/Makefile.am
@@ -1,9 +1,9 @@
 
 
-bin_SCRIPTS = init_rtxi rtxi_comedi rtxi_plugin_config
+bin_SCRIPTS = init_rtxi rtxi_plugin_config
 
 CLEANFILES = *~ 
-DISTCLEANFILES = init_rtxi rtxi_comedi rtxi_plugin_config
+DISTCLEANFILES = init_rtxi rtxi_plugin_config
 
 
 
