--- a/xi-bone/configure.in
+++ b/xi-bone/configure.in
@@ -30,15 +30,6 @@ fi
 
 rtos="posix"
 
-#AC_CHECK_RTAI
-#AC_ARG_ENABLE(xenomai,
-#  [  --enable-xenomai        build the Xenomai interface],
-#  [case "${enablecal}" in
-#    "" | y | ye | yes) rtos=xenomai;;
-#    n | no);;
-#    *) AC_MSG_ERROR(bad value ${enableval} for --enable-xenomai);;
-#  esac],
-#  [])
 AC_ARG_ENABLE(posix,
   [  --enable-posix          build the POSIX non-RT interface],
   [case "${enableval}" in
@@ -48,28 +39,9 @@ AC_ARG_ENABLE(posix,
   esac],
   [])
 
-#AM_CONDITIONAL(RTAI3, test x$rtos = xrtai3)
-#AM_CONDITIONAL([XENOMAI],[test x$rtos = xxenomai])
-#AM_CONDITIONAL([POSIX],[test x$rtos = xposix])
-#if test x$rtos = xrtai3; then
-#  RTOS_CPPFLAGS=$RTAI_CPPFLAGS
-#  RTOS_LDFLAGS=$RTAI_LDFLAGS
-#elif test x$rtos = xxenomai; then
-#  if test -x /usr/xenomai/bin/xeno-config; then
-#    XENO_CONFIG='/usr/xenomai/bin/xeno-config'
-#  elif test -x /usr/bin/xeno-config; then
-#    XENO_CONFIG='/usr/bin/xeno-config'
-#  else
-#    XENO_CONFIG=`which xeno-config`
-#  fi
-#  RTOS_CPPFLAGS=`$XENO_CONFIG --skin=native --cflags`
-#  RTOS_LDFLAGS=`$XENO_CONFIG --skin=native --ldflags`
-#elif test x$rtos = xposix; then
-  RTOS_CPPFLAGS='-I/usr/local/include'
-  RTOS_LDFLAGS='-I/usr/local/include -L/usr/local/lib -lpthread'
-#elif test x$rtos = x;then
-#  AC_MSG_ERROR([no realtime system found])
-#fi
+RTOS_CPPFLAGS='-I/usr/local/include'
+RTOS_LDFLAGS='-I/usr/local/include -L/usr/local/lib -lpthread'
+
 AC_SUBST(RTOS_CPPFLAGS)
 AC_SUBST(RTOS_LDFLAGS)
 
@@ -83,63 +55,31 @@ AC_ARG_ENABLE(debug,
   [debug=false])
 AM_CONDITIONAL(DEBUG, test x$debug = xtrue)
 
-#AC_ARG_ENABLE(comedi,
-#  [  --enable-comedi         build the comedi driver],
-#  [case "${enableval}" in
-#    "" | y | ye | yes) comedi=true;;
-#    n | no) comedi=false;;
-#    *) AC_MSG_ERROR(bad value ${enableval} for --enable-comedi);;
-#  esac],
-#[comedi=true])
-
-#AC_ARG_ENABLE(analogy,
-#  [  --enable-analogy        build the analogy driver],
-#  [case "${enableval}" in
-#    "" | y | ye | yes) analogy=true;;
-#    n | no) analogy=false;;
-#    *) AC_MSG_ERROR(bad value ${enableval} for --enable-analogy);;
-#  esac],
-#  [analogy=true])  
-
-#if test x$rtos = xrtai3; then
-#  AM_CONDITIONAL(BUILD_COMEDI, test x$comedi = xtrue)
-#  AM_CONDITIONAL(BUILD_COMEDILIB,false)
-#  AM_CONDITIONAL(BUILD_ANALOGY, false)
-#elif test x$rtos = xposix; then
-  AM_CONDITIONAL(BUILD_COMEDI,false)
-  AM_CONDITIONAL(BUILD_COMEDILIB, false)
+#  AM_CONDITIONAL(BUILD_COMEDI,false)
+#  AM_CONDITIONAL(BUILD_COMEDILIB, false)
 #  AM_CONDITIONAL(BUILD_COMEDILIB, test x$comedi = xtrue)
-  AM_CONDITIONAL(BUILD_ANALOGY, false)
-#elif test x$rtos = xxenomai; then
-#  AM_CONDITIONAL(BUILD_COMEDI,false)
-#  AM_CONDITIONAL(BUILD_COMEDILIB,false)
-#  AM_CONDITIONAL(BUILD_ANALOGY, test x$analogy = xtrue)
-#else
-#  AM_CONDITIONAL(BUILD_COMEDI,false)
-#  AM_CONDITIONAL(BUILD_COMEDILIB,false)
 #  AM_CONDITIONAL(BUILD_ANALOGY, false)
-#fi
 
-AC_ARG_ENABLE(ni,
-  [  --enable-ni             build the ni driver],
-  [case "${enableval}" in
-    "" | y | ye | yes) ni=true;;
-    n | no) ni=false#;;
-    a*) AC_MSG_ERROR(bad value ${enableval} for --enable-ni);;
-  esac],
-  [ni=false])
-AM_CONDITIONAL(BUILD_NI, false)
+#AC_ARG_ENABLE(ni,
+#  [  --enable-ni             build the ni driver],
+#  [case "${enableval}" in
+#    "" | y | ye | yes) ni=true;;
+#    n | no) ni=false#;;
+#    a*) AC_MSG_ERROR(bad value ${enableval} for --enable-ni);;
+#  esac],
+#  [ni=false])
+#AM_CONDITIONAL(BUILD_NI, false)
 #AM_CONDITIONAL(BUILD_NI, test x$ni = xtrue)
 
-AC_ARG_ENABLE(clampprotocol,
-  [  --enable-clampprotocol     build the clamp protocol module (default=enabled)],
-  [case "${enableval}" in
-    "" | y | ye | yes) clampprotocol=true ;;
-    n | no) clampprotocol=false ;;
-    *) AC_MSG_ERROR(bad value ${enableval} for --enable-clampprotocol) ;;
-  esac],
-  [clampprotocol=true])
-AM_CONDITIONAL(BUILD_CLAMPPROTOCOL, false)
+#AC_ARG_ENABLE(clampprotocol,
+#  [  --enable-clampprotocol     build the clamp protocol module (default=enabled)],
+#  [case "${enableval}" in
+#    "" | y | ye | yes) clampprotocol=true ;;
+#    n | no) clampprotocol=false ;;
+#    *) AC_MSG_ERROR(bad value ${enableval} for --enable-clampprotocol) ;;
+#  esac],
+#  [clampprotocol=true])
+#AM_CONDITIONAL(BUILD_CLAMPPROTOCOL, false)
 #AM_CONDITIONAL(BUILD_CLAMPPROTOCOL, test x$clampprotocol = xtrue)
 
 dnl Clear build variables
@@ -177,7 +117,6 @@ plugins/mimic/Makefile
 plugins/model_loader/Makefile
 plugins/neuron/Makefile
 plugins/noisegen/Makefile
-plugins/ni_device/Makefile
 plugins/oscilloscope/Makefile
 plugins/performance_measurement/Makefile
 plugins/siggen/Makefile
