--- a/OS/config
+++ b/OS/config
@@ -1,4 +1,19 @@
 #
+#-------------------------------------------------------------------------
+
+#	This file is part of the BoneClamp Data Conversion and Processing System
+#	Copyright (C) 2013 BoneClamp
+
+#-------------------------------------------------------------------------
+
+#	Filename: Kernel config file for compiling custom real-time kernel
+
+#	To the extent possible under law, the author(s) have dedicated all copyright and related and neighboring rights to this software to the public domain worldwide. This software is distributed without any warranty.
+
+#	You should have received a copy of the CC Public Domain Dedication along with this software. If not, see <http://creativecommons.org/licenses/by-sa/3.0/legalcode>.
+#
+
+#
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm 3.2.21 Kernel Configuration
 #
