--- a/xi-bone/Makefile.am
+++ b/xi-bone/Makefile.am
@@ -1,3 +1,19 @@
+#-------------------------------------------------------------------------
+
+#	This file is part of the BoneClamp Data Conversion and Processing System
+#	Copyright (C) 2013 BoneClamp
+
+#-------------------------------------------------------------------------
+
+#	Filename: autogen.sh to generate xi-bone makefiles
+
+#	To the extent possible under law, the author(s) have dedicated all copyright
+#	and related and neighboring rights to this software to the public domain
+#	worldwide. This software is distributed without any warranty.
+
+#	You should have received a copy of the CC Public Domain Dedication along with
+#	this software. If not, see <http://creativecommons.org/licenses/by-sa/3.0/legalcode>.
+
 # this is to include the Autoconf scripts in subdir m4/
 ACLOCAL_AMFLAGS=-I m4
 
