adding simple ring buffer with atomic calls; should do the trick for us

--- a/pru/apps/prus/Makefile
+++ b/pru/apps/prus/Makefile
@@ -11,7 +11,7 @@ TARGET=$(BINDIR)/prus
 _DEPS = 
 DEPS = $(patsubst %,$(INCDIR_APP_LOADER)/%,$(_DEPS))
 
-_OBJ = pru.o
+_OBJ = PRU.o
 OBJ = $(patsubst %,$(OBJDIR)/%,$(_OBJ))
 
 $(OBJDIR)/%.o: %.c $(DEPS)
