--- a/pru/apps/Makefile
+++ b/pru/apps/Makefile
@@ -1,19 +1,35 @@
--include DIRS
+##
+##	 -------------------------------------------------------------------------
+##
+##	 This file is part of the BoneClamp Data Conversion and Processing System
+##	 Copyright (C) 2013 BoneClamp
+##
+##	 -------------------------------------------------------------------------
+##
+##	Written in 2013 by: Yogi Patel <yapatel@gatech.edu>
+##
+##	To the extent possible under law, the author(s) have dedicated all copyright
+##	and related and neighboring rights to this software to the public domain
+##	worldwide. This software is distributed without any warranty.
+##
+##	You should have received a copy of the CC Public Domain Dedication along with
+##	this software. If not, see <http://creativecommons.org/licenses/by-sa/3.0/legalcode>.
+##
 
-# CROSS_COMPILE?=arm-arago-linux-gnueabi-
 LIBDIR_APP_LOADER?=../../app_loader/lib
 INCDIR_APP_LOADER?=../../app_loader/include
 BINDIR_APPLICATIONS?=../bin
 BINDIR_FW?=bin
 PASM?=../utils/pasm
 
-all:
-# Make PRU example applications
-	mkdir -p bin
+APP_DIRS = prus
+ASSEM_FILES = prus/PRU0.p prus/PRU1.p
+BIN_FILES = prus/PRU0.p prus/PRU1.p
 
+all:
+	mkdir -p bin
 	for dir in $(APP_DIRS); do make -C $$dir CROSS_COMPILE="${CROSS_COMPILE}" LIBDIR_APP_LOADER="${LIBDIR_APP_LOADER}" INCDIR_APP_LOADER="${INCDIR_APP_LOADER}" BINDIR="${BINDIR_APPLICATIONS}"; done
 
-# Pass PRU assembly code for each example through assembler
 	for a_file in ${ASSEM_FILES} ; \
 	do \
           ${PASM} -b $$a_file ; \
@@ -24,4 +40,3 @@ clean:
 	for dir in $(APP_DIRS); do make -C $$dir clean LIBDIR_APP_LOADER="${LIBDIR_APP_LOADER}" LIBDIR_EDMA_DRIVER="${LIBDIR_EDMA_DRIVER}" INCDIR_APP_LOADER="${INCDIR_APP_LOADER}" INCDIR_EDMA_DRIVER="${INCDIR_EDMA_DRIVER}" BINDIR="${BINDIR_APPLICATIONS}"; done
 
 	for bin_file in ${BIN_FILES}; do rm -fr ${BINDIR_FW}/$$bin_file; done
-
